--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 25%);" src="http://192.168.232.178/" width="1078" height="808">
+<img src="http://192.168.232.178/">
